# rust_backend_assignment

./: .env.example  AGENTS.md  AI_USAGE.md  Cargo.toml  LICENSE  README.md  SPEC.md
migrations/: 20260626000000_init.sql
src/: config.rs  error.rs  lib.rs  main.rs  models.rs  router.rs  state.rs  tasks.db
src/handlers/: auth.rs  mod.rs  task.rs
src/middleware/: mod.rs
src/repositories/: challenge.rs  mod.rs  task.rs  user.rs
src/services/: auth.rs  task.rs
tests/: integration_test.rs
